trunk-20100623
+ change indent mode a little bit
  this changes many lines, so give put it in an extra commit

trunk-20100623
+ Makefile: exit if there is no compiler available
+ globals can now also be fixed
+ force data is now separated by 2 blank lines, makes scatterplots for single configs easy

devel-20100610
+ make punishments for apot optional
+ there is now (again) a limit on the size of the directional vectors v in simann

trunk-20100609
+ revert simann changes from 201005012
+ update plotapot script for adp potentials
+ update GPL notice
+ add new analytic functions and update old ones

trunk-20100531
+ adapt force routines to new col system

trunk-20100525
+ make scripts executable
+ fix conf_weights for stresses

adp-20100528
+ fix conf_weight for stresses
+ adp is now working with mpi
+ save coloumns for interactions, untested with tabulated potentials for now

adp-20100527
+ adp should now be complete, mpi still missing

bzr-20100512
+ moved files from *_r.* to *.*, all types are real, include header for bracketing
+ fix warnings when compiling with debug flag
+ simann now counts all new parameters as an attempt, even if they were out of bounds
+ optimize evo output
+ properly initialize the dSFMT prng

bzr-20100510
+ removed some commented code
+ make the order of chemical potentials, globals and other stuff in the potential file
	arbitrary
+ switch random number generator to double precision Fast Mersenne Twister (dSFMT)
	this has not been tested on other platforms
+ move normdist to utils.c, it is used in simann.c and diff_evo.c
+ remove potscale and oldcode completely
+ move update_slots to an earlier point of execution time, only root does it now
+ remove pot_list completely
+ change MAXNEIGH to dynamic array
+ only save new neighbors, speeds up the optimization significantly
  calculate forces with actio=reactio

bzr-20100426
+ re-add ADP part

bzr-20100426
+ start migration to bazaar vcs
+ prepare trunk:
	removed .revisions file