@@ -31,11 +31,11 @@
 #ifdef MPI
 #include "potfit.h"
 
-/******************************************************************************
-*
-* set up mpi
-*
-******************************************************************************/
+/****************************************************************
+ *
+ * set up mpi
+ *
+ ****************************************************************/
 
 void init_mpi(int argc, char **argv)
 {
@@ -47,11 +47,11 @@ void init_mpi(int argc, char **argv)
 }
 
 
-/******************************************************************************
-*
-* shut down mpi
-*
-******************************************************************************/
+/****************************************************************
+ *
+ * shut down mpi
+ *
+ ****************************************************************/
 
 void shutdown_mpi(void)
 {
@@ -84,11 +84,12 @@ void debug_mpi(int i)
   fflush(stdout);
 }
 
-/***************************************************************************
+/****************************************************************
  *
  * broadcast_param: Broadcast parameters etc to other nodes
  *
- **************************************************************************/
+ ****************************************************************/
+
 #ifdef PAIR
 #define MAX_MPI_COMPONENTS 8
 #elif defined EAM
@@ -372,11 +373,11 @@ void broadcast_params()
     conf_us, myconf, MPI_INT, 0, MPI_COMM_WORLD);
 }
 
-/***************************************************************************
+/****************************************************************
  *
  * scatter dynamic neighbor table
  *
- **************************************************************************/
+ ****************************************************************/
 
 void broadcast_neighbors()
 {
