@@ -141,7 +141,7 @@ echo -e "#disable_cp\t0"
 #echo ""
 #echo "# options for output"
 #echo "# number of points in each function in imd file"
-echo -e "imdpotsteps\t1000"
+echo -e "imdpotsteps\t5000"
 #echo ""
 #echo "# prefix for various output files like force, energy and stress deviations"
 echo -e "output_prefix\t$prefix"
