@@ -1,14 +1,21 @@
+trunk-live
++ [APOT] reduce number of sampling points for analytic potentials
++ [APOT] makeapot now writes the correct potential type
++ [APOT] fixed a bug with cp and globals
++ don't write errors if the weight is 0 for energy or stress
++ [APOT] update NOPUNISH target a little bit
+
 trunk-20100623
 + change indent mode a little bit
-  this changes many lines, so give put it in an extra commit
+  this changes many lines, so put it in an extra commit
 
 trunk-20100623
 + Makefile: exit if there is no compiler available
-+ globals can now also be fixed
++ [APOT] globals can now also be fixed
 + force data is now separated by 2 blank lines, makes scatterplots for single configs easy
 
 devel-20100610
-+ make punishments for apot optional
++ [APOT] make punishments for apot optional
 + there is now (again) a limit on the size of the directional vectors v in simann
 
 trunk-20100609
